commit on english content

--- a/index-en.html
+++ b/index-en.html
@@ -68,7 +68,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="tematiche.html#tematiche">Topics</a>
+                            <a href="tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
                             <a data-bs-dismiss="modal" href="#about">About me</a>
@@ -83,7 +83,7 @@
                 </div>
                 <!-- MENU FOOTER -->
                 <div class="modal-footer">
-                    <a href="index.html" data-bs-dismiss="modal" class="language">Italiano</a>
+                    <a href="index.html" class="language">Italiano</a>
                     <a href="index-en.html" data-bs-dismiss="modal" class="language">English</a>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                         <!-- DESKTOP NAVBAR -->
                         <div class="left">
                             <li>
-                                <a href="index.html">
+                                <a href="index-en.html">
                                     <img src="./assets/logo.png" alt="logo" id="logo-nav">
                                 </a>
                             </li>
@@ -139,7 +139,7 @@
                                 <a href="#intro">Psychological counselling</a>
                             </li>
                             <li>
-                                <a href="tematiche.html#tematiche">Topics</a>
+                                <a href="tematiche-en.html#tematiche">Topics</a>
                             </li>
                             <li>
                                 <a href="#about">About me</a>
@@ -319,7 +319,7 @@
                             <i class='bx bxs-tired'></i>
                             <h5 class="card-title">Stress, sleep, anxiety</h5>
                             <p class="card-text">How to feel better when suffering from anxiety or panic attacks? How to improve your sleep?</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#ansia-stress">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#ansia-stress">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -327,7 +327,7 @@
                             <i class='bx bxs-donate-heart' ></i>
                             <h5 class="card-title">Relationships and communication</h5>
                             <p class="card-text">Learning to be in relationships and communicate differently.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#relazioni">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#relazioni">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -335,7 +335,7 @@
                             <i class='bx bxs-dislike' ></i>
                             <h5 class="card-title">Difficult and blocking situations</h5>
                             <p class="card-text">Feeling stuck in a situation, feeling in a difficult moment, being in a painful situation.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#situazioni-difficili">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#situazioni-difficili">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -343,7 +343,7 @@
                             <i class='bx bx-street-view' ></i>
                             <h5 class="card-title">Sexuality</h5>
                             <p class="card-text">Talking about sexuality without taboos and without judgment.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#sesso">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#sesso">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -351,7 +351,7 @@
                             <i class='bx bxs-universal-access' ></i>
                             <h5 class="card-title">LGBTQIA+</h5>
                             <p class="card-text">Being ourselves with ourselves and others.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#lgbt">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#lgbt">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -359,7 +359,7 @@
                             <i class='bx bxs-brain'></i>
                             <h5 class="card-title">Challenging thoughts</h5>
                             <p class="card-text">Recurring thoughts, thoughts that are difficult to handle or to share with other people.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#pensieri">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#pensieri">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -367,7 +367,7 @@
                             <i class='bx bxs-briefcase'></i>
                             <h5 class="card-title">Problems at work and Burnout</h5>
                             <p class="card-text">Feeling good about work and preventing Burnout.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#lavoro">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#lavoro">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -375,7 +375,7 @@
                             <i class='bx bxs-book-reader' ></i>
                             <h5 class="card-title">University and School</h5>
                             <p class="card-text">Study method, procrastination, motivation, orientation, anxiety and stress.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#studio">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#studio">Discover more</a>
                         </div>
                     </div>
                     <div class="card secondary-bg card-icon-text centered animate__animated animate__fadeInDown">
@@ -383,7 +383,7 @@
                             <i class='bx bx-globe'></i>
                             <h5 class="card-title">Living abroad</h5>
                             <p class="card-text">Psychological support for expats.</p>
-                            <a class="btn btn-primary-outline" href="tematiche.html#estero">Discover more</a>
+                            <a class="btn btn-primary-outline" href="tematiche-en.html#estero">Discover more</a>
                         </div>
                     </div>
                 </div>
@@ -703,7 +703,7 @@
                         </div>
                       </div>
                     <div class="col-6 col-md-2 mb-3">
-                        <h5><a href="#intro">Consulenza psicologica</a></h5>
+                        <h5><a href="#intro">Psychological counselling</a></h5>
                       <!-- <ul class="nav flex-column footer-list"> -->
                         <!-- <li class="nav-item mb-2"><a href="#">Testing</a></li>
                         <li class="nav-item mb-2"><a href="#">Templating</a></li> -->
@@ -711,7 +711,7 @@
                     </div>
               
                     <div class="col-6 col-md-2 mb-3">
-                        <h5><a href="tematiche.html">Tematiche</a></h5>
+                        <h5><a href="tematiche-en.html">Topics</a></h5>
                       <!-- <ul class="nav flex-column footer-list">
                         <li class="nav-item mb-2"><a href="#">Home</a></li>
                         <li class="nav-item mb-2"><a href="#">Features</a></li>
@@ -719,7 +719,7 @@
                     </div>
               
                     <div class="col-6 col-md-2 mb-3">
-                      <h5><a href="#about">Chi sono</a></h5>
+                      <h5><a href="#about">About me</a></h5>
                       <!-- <ul class="nav flex-column footer-list">
                         <li class="nav-item mb-2"><a href="#">Home</a></li>
                         <li class="nav-item mb-2"><a href="#">Features</a></li>
