--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -64,19 +64,19 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="index.html#intro">Consulenza psicologica</a>
+                            <a href="index.html#intro">Psychological counselling</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="tematiche.html#tematiche">Tematiche</a>
+                            <a data-bs-dismiss="modal" href="tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index.html#about">Chi sono</a>
+                            <a data-bs-dismiss="modal" href="index-en.html#about">About me</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index.html#contatti" class="btn btn-primary">Contattami</a>
+                            <a data-bs-dismiss="modal" href="index-en.html#contatti" class="btn btn-primary">Contact me</a>
                         </li>
                     </ul>
                 </div>
@@ -227,10 +227,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html#intro">Consulenza psicologica</a>
+                                <a href="index-en.html#intro">Psychological counselling</a>
                             </li>
                             <li>
-                                <a href="#tematiche">Tematiche</a>
+                                <a href="#tematiche">Topics</a>
                             </li>
                             <li>
                                 <a href="index.html#about">Chi sono</a>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="right">
                             <li>
-                                <a href="index.html#contatti" class="btn btn-secondary" id="nav-cta">Contattami</a>
+                                <a href="index-en.html#contatti" class="btn btn-secondary" id="nav-cta">Contact me</a>
                             </li>
                             <!-- LANGUAGE -->
                             <li>
@@ -436,7 +436,7 @@
             <div class="section-content centered">
                 <div class="section-block1">
                     <p>Non trovi quello che cerchi? Contattami, insieme possiamo capire se e come posso esserti d’aiuto, anche indirizzandoti verso altri professionisti, in Italia o all’estero.</p>
-                    <a href="index.html#contatti" class="btn btn-primary">Contattami</a>
+                    <a href="index-en.html#contatti" class="btn btn-primary">Contattami</a>
                 </div>
             </div>
         </div>
@@ -760,7 +760,7 @@
                             </div>
                           </div>
                         <div class="col-6 col-md-2 mb-3">
-                            <h5><a href="index.html#intro">Consulenza psicologica</a></h5>
+                            <h5><a href="index-en.html#intro">Psychological counselling</a></h5>
                           <!-- <ul class="nav flex-column footer-list"> -->
                             <!-- <li class="nav-item mb-2"><a href="#">Testing</a></li>
                             <li class="nav-item mb-2"><a href="#">Templating</a></li> -->
@@ -768,7 +768,7 @@
                         </div>
                   
                         <div class="col-6 col-md-2 mb-3">
-                            <h5><a href="#">Tematiche</a></h5>
+                            <h5><a href="#tematiche">Topics</a></h5>
                           <!-- <ul class="nav flex-column footer-list">
                             <li class="nav-item mb-2"><a href="#">Home</a></li>
                             <li class="nav-item mb-2"><a href="#">Features</a></li>
@@ -776,7 +776,7 @@
                         </div>
                   
                         <div class="col-6 col-md-2 mb-3">
-                          <h5><a href="index.html#about">Chi sono</a></h5>
+                          <h5><a href="index-en.html#about">About me</a></h5>
                           <!-- <ul class="nav flex-column footer-list">
                             <li class="nav-item mb-2"><a href="#">Home</a></li>
                             <li class="nav-item mb-2"><a href="#">Features</a></li>
