added infographics in english, translated tematiche-en

--- a/index-en.html
+++ b/index-en.html
@@ -587,30 +587,30 @@
     <section data-aos="fade-down">
         <div class="section-wrapper">
             <div class="section-content">
-                <div class="chip-basic">Rispondo</div>
-                <h3 class="section-title">Le domande piú frequenti</h3>
+                <div class="chip-basic">Answering</div>
+                <h3 class="section-title">Frequent Answered Questions</h3>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Quanto dura un percorso psicologico?
+                            How long does counselling last?
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p>Non c’è una durata prestabilita. La durata del percorso verrà concordata in itinere.</p>
+                            <p>There is no fixed duration. The duration will be agreed in itinere.</p>
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Come faccio a capire se è il tipo di percorso adatto a me?
+                            How do I know if this is the right counselling type for me?
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p>Anche per questa domanda non c’è una ricetta magica, è comunque un argomento di cui puoi parlare apertamente con il tuo psicologo il quale, nel caso si verificasse la necessità, può a sua volta indirizzarti verso altri professionisti.
+                            <p>Even for this question there is no magic recipe, it is however a subject that you can discuss openly with your psychologist who, should the need arise, can refer you to other professionals.
                             </p>
                         </div>
                       </div>
@@ -618,24 +618,24 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            E se non so di preciso di cosa ho bisogno?
+                            What if I don't know exactly what I need?
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p>Questa situazione è più comune di quanto tu creda: insieme possiamo capire meglio i tuoi bisogni e la direzione del cambiamento che vuoi intraprendere.</p>
+                            <p>This situation is more common than you think: together we can better understand your needs and the direction of the change you want to undertake.</p>
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFour">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Online o in presenza?
+                            Online or face-to-face?
                           </button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
-                              <p>Dipende dalle tue esigenze, non c’è un “meglio” o un “peggio”. Sicuramente la situazione che abbiamo vissuto durante la pandemia ha aiutato noi psicologi a diventare più familiari con la consulenza online, che permette, ad esempio, a persone che vivono lontane da uno studio di psicologi di accedere comunque al servizio e prendersi così cura di sè.
+                              <p>It depends on your needs, there is no 'better' or 'worse'. Certainly the situation we experienced during the pandemic helped us psychologists to become more familiar with online counselling, which allows, for example, people who live far away from a psychologist's practice to still access the service.
                             </p>
                           </div>
                         </div>
@@ -643,12 +643,12 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFive">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            Qual è il tuo orientamento?
+                            What is your training?
                           </button>
                         </h2>
                         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
-                              <p>Mi sto attualmente formando presso una scuola costruttivista. Cosa vuol dire? Questa cornice teorica guarda all’individuo come costruttore di significati. Questo mi permette di adottare una prospettiva che ritengo molto rispettosa della persona e di come significa il mondo. Vuoi saperne di più? Puoi leggere qualcosa del costruttivismo e trovare riferimenti bibliografici <a href="https://www.icp-italia.it/it">qui</a>
+                              <p>I am currently training at a constructivist school. What does that mean? This theoretical framework looks at the individual as a constructor of meaning. This allows me to adopt a perspective that I think is very respectful of the individual and of they way in which every person sees the world. Do you want to know more? You can read about constructivism and find bibliographical references <a href="https://www.icp-italia.it/it">here</a>
                             </p>
                           </div>
                         </div>
@@ -656,12 +656,12 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingSix">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                            Come posso prenotare una seduta? Ho altre domande e non trovo le risposte nel sito, come posso fare?
+                            How can I book a session? I have other questions and can't find the answers on the website, what can I do?
                           </button>
                         </h2>
                         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
-                              <p>Per prenotare una seduta o pormi altre domande non esitare a contattarmi alla <a href="mailto:aurora.belfanti.psy@gmail.com">email</a>
+                              <p>book a session or ask other questions, please do not hesitate to contact me via <a href="mailto:aurora.belfanti.psy@gmail.com">email</a>
                             </p>
                           </div>
                         </div>
@@ -681,7 +681,7 @@
                         <div class="banner-content">
                             <div class="left">
                                 <!-- <h3>Cadiamo solo per imparare a rialzarci.</h3> -->
-                                <p>"Non giudicare sbagliato ciò che non conosci, prendi l’occasione per comprendere." (Pablo Picasso).</p>
+                                <p>"Do not judge wrongly what you do not know, take the opportunity to understand." (Pablo Picasso).</p>
                                 <!-- <a href="#contatti" class="btn btn-primary" >Contattami</a> -->
                             </div>
                         </div>
