--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -233,7 +233,7 @@
                                 <a href="#tematiche">Topics</a>
                             </li>
                             <li>
-                                <a href="index.html#about">Chi sono</a>
+                                <a href="index.html#about">About</a>
                             </li>
                         </div>
                         <div class="right">
