--- a/tematiche.html
+++ b/tematiche.html
@@ -735,7 +735,7 @@
 
                         Ho lavorato diversi anni a Bruxelles, offrendo percorsi di consulenza psicologica a expat sia online che in presenza. 
 
-                        Sei all’estero e vorresti iniziare un percorso di consulenza psicologica online? Contattami attraverso il form o via email.
+                        Sei all’estero e vorresti iniziare un percorso di consulenza psicologica online? Contattami via email.
 
                         Abiti in Trentino e vuoi un appuntamento in studio? Contattami via <a href="index.html#contatti">email</a>.
 
