--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -82,8 +82,8 @@
                 </div>
                 <!-- MENU FOOTER -->
                 <div class="modal-footer">
-                    <a href="tematiche.html" class="language">Italiano</a>
-                    <a href="tematiche-en.html" data-bs-dismiss="modal" class="language">English</a>
+                    <a href="/tematiche.html" class="language">Italiano</a>
+                    <a href="/tematiche-en.html" data-bs-dismiss="modal" class="language">English</a>
                 </div>
             </div>
         </div>
