fixes on mobile menu

--- a/index-en.html
+++ b/index-en.html
@@ -64,20 +64,20 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="#intro">Psychological counselling
+                            <a href="/index-en.html#intro">Psychological counselling
                             </a>
                         </li>
                         <li>
-                            <a href="tematiche-en.html#tematiche">Topics</a>
+                            <a href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="#about">About me</a>
+                            <a data-bs-dismiss="modal" href="/index-en.html#about">About me</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="#contatti" class="btn btn-primary">Contact me</a>
+                            <a data-bs-dismiss="modal" href="/index-en.html#contatti" class="btn btn-primary">Contact me</a>
                         </li>
                     </ul>
                 </div>
@@ -136,18 +136,18 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#intro">Psychological counselling</a>
+                                <a href="/index.html#intro" data-bs-dismiss="modal">Psychological counselling</a>
                             </li>
                             <li>
-                                <a href="tematiche-en.html#tematiche">Topics</a>
+                                <a href="/tematiche-en.html#tematiche">Topics</a>
                             </li>
                             <li>
-                                <a href="#about">About me</a>
+                                <a href="/index-en.html#about">About me</a>
                             </li>
                         </div>
                         <div class="right">
                             <li>
-                                <a href="#contatti" class="btn btn-secondary" id="nav-cta">Contact me</a>
+                                <a href="index-en.html#contatti" class="btn btn-secondary" id="nav-cta">Contact me</a>
                             </li>
                             <!-- LANGUAGE -->
                             <li>
