--- a/index.html
+++ b/index.html
@@ -64,26 +64,26 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="#intro">Consulenza psicologica</a>
+                            <a href="/index.html#intro" data-bs-dismiss="modal">Consulenza psicologica</a>
                         </li>
                         <li>
-                            <a href="tematiche.html#tematiche">Tematiche</a>
+                            <a href="/tematiche.html#tematiche" data-bs-dismiss="modal">Tematiche</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="#about">Chi sono</a>
+                            <a href="/index.html#about" data-bs-dismiss="modal">Chi sono</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="#contatti" class="btn btn-primary">Contattami</a>
+                            <a href="/index.html#contatti" data-bs-dismiss="modal" class="btn btn-primary">Contattami</a>
                         </li>
                     </ul>
                 </div>
                 <!-- MENU FOOTER -->
                 <div class="modal-footer">
-                    <a href="index.html" data-bs-dismiss="modal" class="language">Italiano</a>
-                    <a href="index-en.html" data-bs-dismiss="modal" class="language">English</a>
+                    <a href="/index.html" data-bs-dismiss="modal" class="language">Italiano</a>
+                    <a href="/index-en.html" class="language">English</a>
                 </div>
             </div>
         </div>
