--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -327,7 +327,7 @@
                         </div> -->
                         <div class="hero-title">
                             <h1>Topics</h1>
-                            <h4>What type of counselling do I offer?<br> What type of counselling do I offer?
+                            <h4 class="text-left">What type of counselling do I offer?<br>
                                 You can book an appointment if you want to learn how to cope with anxiety, stress, school, university or the work environment and much more. Have a look at the topics below.
                                 Do you have questions? Contact me!
                                 </h4>
