TENTATIVE FIX: pdf infographic directly in chrome

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="/index.html#intro" data-bs-dismiss="modal">Consulenza psicologica</a>
+                            <a href="index.html#intro" data-bs-dismiss="modal">Consulenza psicologica</a>
                         </li>
                         <li>
-                            <a href="/tematiche.html#tematiche" data-bs-dismiss="modal">Tematiche</a>
+                            <a href="tematiche.html#tematiche" data-bs-dismiss="modal">Tematiche</a>
                         </li>
                         <li>
                             <a href="/index.html#about" data-bs-dismiss="modal">Chi sono</a>
