--- a/index-en.html
+++ b/index-en.html
@@ -64,17 +64,17 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="/index-en.html#intro">Psychological counselling
+                            <a href="/index-en.html#intro" data-bs-dismiss="modal" >Psychological counselling
                             </a>
                         </li>
                         <li>
                             <a href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index-en.html#about">About me</a>
+                            <a href="/index-en.html#about" data-bs-dismiss="modal">About me</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index-en.html#contatti" class="btn btn-primary">Contact me</a>
+                            <a href="/index-en.html#contatti" class="btn btn-primary" data-bs-dismiss="modal" >Contact me</a>
                         </li>
                     </ul>
                 </div>
