--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -64,19 +64,19 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="index.html#intro">Psychological counselling</a>
+                            <a href="/index.html#intro">Psychological counselling</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="tematiche-en.html#tematiche">Topics</a>
+                            <a data-bs-dismiss="modal" href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index-en.html#about">About me</a>
+                            <a data-bs-dismiss="modal" href="/index-en.html#about">About me</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index-en.html#contatti" class="btn btn-primary">Contact me</a>
+                            <a data-bs-dismiss="modal" href="/index-en.html#contatti" class="btn btn-primary">Contact me</a>
                         </li>
                     </ul>
                 </div>
