--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -64,7 +64,7 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="/index.html#intro">Psychological counselling</a>
+                            <a href="/index-en.html#intro">Psychological counselling</a>
                         </li>
                         <li>
                             <a data-bs-dismiss="modal" href="/tematiche-en.html#tematiche">Topics</a>
