--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
                     <!-- OPTION 1, SIMPLE LIST -->
                     <ul class="simple-list">
                         <li>
-                            <a href="/index.html#intro" data-bs-dismiss="modal">Consulenza psicologica</a>
+                            <a href="/index.html#intro">Consulenza psicologica</a>
                         </li>
                         <li>
                             <a href="/tematiche.html#tematiche">Tematiche</a>
                         </li>
                         <li>
-                            <a href="/index.html#about" data-bs-dismiss="modal">Chi sono</a>
+                            <a href="/index.html#about">Chi sono</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a href="/index.html#contatti" data-bs-dismiss="modal" class="btn btn-primary">Contattami</a>
+                            <a href="/index.html#contatti" class="btn btn-primary">Contattami</a>
                         </li>
                     </ul>
                 </div>
