--- a/tematiche-en.html
+++ b/tematiche-en.html
@@ -70,13 +70,13 @@
                             <a data-bs-dismiss="modal" href="/tematiche-en.html#tematiche">Topics</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index-en.html#about">About me</a>
+                            <a href="/index-en.html#about">About me</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index-en.html#contatti" class="btn btn-primary">Contact me</a>
+                            <a href="/index-en.html#contatti" class="btn btn-primary">Contact me</a>
                         </li>
                     </ul>
                 </div>
