--- a/tematiche.html
+++ b/tematiche.html
@@ -67,16 +67,16 @@
                             <a href="index.html#intro">Consulenza psicologica</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="tematiche.html#tematiche">Tematiche</a>
+                            <a data-bs-dismiss="modal" href="/tematiche.html#tematiche">Tematiche</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index.html#about">Chi sono</a>
+                            <a data-bs-dismiss="modal" href="/index.html#about">Chi sono</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="index.html#contatti" class="btn btn-primary">Contattami</a>
+                            <a data-bs-dismiss="modal" href="/index.html#contatti" class="btn btn-primary">Contattami</a>
                         </li>
                     </ul>
                 </div>
