--- a/tematiche.html
+++ b/tematiche.html
@@ -70,13 +70,13 @@
                             <a data-bs-dismiss="modal" href="/tematiche.html#tematiche">Tematiche</a>
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index.html#about">Chi sono</a>
+                            <a href="/index.html#about">Chi sono</a>
                         </li>
                         <li>
                             <!-- <a data-bs-dismiss="modal" href="#">Le marche</a> -->
                         </li>
                         <li>
-                            <a data-bs-dismiss="modal" href="/index.html#contatti" class="btn btn-primary">Contattami</a>
+                            <a href="/index.html#contatti" class="btn btn-primary">Contattami</a>
                         </li>
                     </ul>
                 </div>
